--- a/index.html
+++ b/index.html
@@ -44,10 +44,12 @@
                         <span class="text-primary">PENG</span>
                     </h1>
                     <div class="subheading mb-5">
-                        3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
+                        Technical Program Manager · MSCS@Gatech MI@UofT · CIPM CIPP/E/C CIPT·
                         <a href="mailto:name@email.com">ypeng.yvonne@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5"> Welcome to my profile! </p>
+                    <p class="lead mb-5"> I am currently expanding my technical expertise through dual master's degrees in Computer Science and Data Science at Georgia Tech and University of Toronto, focusing on the intersection of software innovation and enterprise solutions.</p>
+                    <p class="lead mb-5"> Prior to my studies, I led cross-functional teams and strategic initiatives at global tech companies including MiHoYo and TikTok, transforming complex challenges into successful outcomes.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
